# hello-hari-recorder

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .env.example  requirements.txt
backend/app/: config.py  hello-hari-recorder.code-workspace  main.py
backend/app/asr/: base.py  factory.py  faster_whisper_engine.py  hybrid_engine.py  indic_conformer_engine.py
backend/app/db/: database.py
backend/app/detection/: classifier.py  narrative_tracker.py  patterns.json  scam_archetypes.py  scam_detector.py  training_data.py
backend/app/routers/: patterns.py  transcription.py  websocket.py
backend/tests/: test_scam_detector.py
docs/: architecture.md  contributing.md  detection-engine.md  roadmap.md  setup.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioRecorder.tsx  ContributePage.tsx  DebugPanel.tsx  ScamAlert.tsx  ShieldIndicator.tsx  TestWorkbench.tsx  TranscriptionView.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: export_patterns_json.py  test_patterns_parity.py  train_classifier.py
scripts/setup/: download_models.py
sdk/java/: README.md
sdk/java/src/: NarrativeTracker.java
sdk/python/: README.md  pyproject.toml
sdk/python/osif_detect/: __init__.py  detector.py
tests/: test_eval_100.py  test_eval_comprehensive.py  test_eval_extended.py  test_narrative.py
