[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osif-detect"
version = "0.1.0"
description = "Multilingual phone scam detection SDK for Indian languages"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["scam", "detection", "multilingual", "india", "phone", "fraud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/hello-hari/osif-detect"
